--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li><a href="#dos"><span class="icon-stats-dots"></span>Misión</a></li>
                     <li><a href="#tres"><span class="icon-eye"></span>Visión</a></li>
                     <li><a href="#cuatro"><span class="icon-file-text2"></span>Términos</a></li>
-                    <li><a href="php/pagosCheck.php"><span class="icon-book"></span>Producto</a></li>
+                    <li><a href="/php/pagosCheck.php"><span class="icon-book"></span>Producto</a></li>
                     <li><a href="http://www.thebestviajes.com/"><span class="icon-cart"></span>Promociones</a></li>
                     <li><a href="#cinco"><span class="icon-envelop"></span>Contacto</a></li>
 
