Cambio para probar git ftp

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <section class="inicio" id="uno">
                     <img src="imagenes/Libro.png" alt="">
                     <p>
-                        En el fascinante mundo del pensamiento humano está la vida cotidiana, basada en las costumbres éticas y morales que son pilares del desarrollo socioeconómico y cultural que marcan nuestro estilo de vida.
+                        En el fascinante mundos del pensamiento humano está la vida cotidiana, basada en las costumbres éticas y morales que son pilares del desarrollo socioeconómico y cultural que marcan nuestro estilo de vida.
                     </p><br>
                     <p>
                         Alejado de los términos sofisticados que explican el pensamiento filosófico, en este libro hemos logrado interpretar conceptos de la filosofía griega que llevan a que entendamos la Programación Neurolingüística (PNL) y como influye esta disciplina de forma positiva en la manera de pensar y en nuestro proyecto de vida, para que seamos futuros triunfadores. 
