--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&display=swap" rel="stylesheet">
     <title>Tu Cultura es Progreso</title>
-    <link rel="stylesheet" href="css/estilosPrincipal.css?v=1">
+    <link rel="stylesheet" href="css/estilosPrincipal.css">
 </head>
 <body>
     <div class="grid-container">
