Arreglo Margen de viñetas de terminos

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&display=swap" rel="stylesheet">
     <title>Tu Cultura es Progreso</title>
     <link rel="stylesheet" href="css/estilosPrincipal.css">
+    <link rel="stylesheet" href="css/estilosPrincipalTablet.css">
+    <link rel="stylesheet" href="css/estilosPrincipalDesktop.css">
 </head>
 <body>
     <div class="grid-container">
@@ -100,7 +102,7 @@
                         <p>
                             Inspirados en nuestra obra literaria Creatividad Motivacional en Girabienes nos hemos sumado a la tarea del   emprendimiento en Girabienes, en nuestro sitio web, donde presentamos detalles y resultados de una obra laboriosa que ha requerido la perseverancia, la disciplina de varios años  y la inclusión participativa y asimilación de los diferentes mercados de nuestro entorno, buscando los recursos y sumándonos al talento humano y profesional de personas muy generosas que nos abren sus puertas, para hacer realidad este emprendimiento, que permite sacar provecho económico y beneficios culturales en un entorno familiar, social y de empresa, especialmente del sector turístico, los usuarios interesados en ser parte de esta tarea de emprendimiento deben acatar los términos y condiciones que el Autor de esta obra digital de Emprendimiento presenta en este sitio web.
                             Hacemos la recomendación a nuestros usuarios hacer la lectura muy detalladamente de las OFERTAS, TERMINOS Y CONDIONES que ofrecemos en los link de la siguientes páginas web:
-                            <ul class="listaTerminos">
+                            <ul>
                                 <li><a href="https://www.tuculturaesprogreso.com/">Tu Cultura es progreso</a></li>
                                 <li><a href="https://www.girabienes.com">Girabienes</a></li>
                             </ul>
