Ajuste de Tamaño para Escritorio

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             <!-- Contenido del pie de Página -->
             <div class="contenido-pie">
                 <a 
-                    class= "facebook" href="https://www.facebook.com/clasificados.engirabieness" target="_blank"><img src="imagenes/facebook.png" alt="">
+                    class= "facebook" href="https://www.facebook.com/clasificados.engirabieness" target="_blank"><img src="imagenes/facebook.jpg" alt="">
                 </a>
                 <p>
                     E-mail:girabienes77@gmail.com<br>
