Agrego Carpeta de imagenes mejoradas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0,maximum-scale=1.0">
     <!-- <link rel="shortcut icon" href="imagenes/icon.png" type="image/x-icon"> -->
-    <link rel="shortcut icon" href="imagenes/icon.webp" type="image/x-icon">
+    <link rel="shortcut icon" href="/imagenes/mejoradas/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
         <header class="header">
             <!-- Sección del logotipo -->
             <section class="logo">
-                <img src="imagenes/logo.png" alt="">
+                <img src="imagenes/mejoradas/logo.png" alt="">
             </section>
             <!-- Sección del menú Hamburguesa -->
             <section class="menu_bar">
@@ -45,7 +45,7 @@
                 <!-- Sección de Inicio -->
                 <section class="inicio" id="uno">
                     <div class="imagenContenido">
-                        <img src="imagenes/Libro.png" alt="imagen inicio">
+                        <img src="/imagenes/mejoradas/libro.png" alt="imagen inicio">
                     </div>
                     <div class="textoContenido">
                         <p>
@@ -65,7 +65,7 @@
                         <h2>Misión</h2>
                     </div>
                     <div class="imagenContenido">
-                        <img src="imagenes/mision.jpg" alt="imagen-mision" >
+                        <img src="imagenes/mejoradas/mision.png" alt="imagen-mision" >
                     </div>
                     <div class="textoContenido">
                         <p>
@@ -79,7 +79,7 @@
                         <h2>Visión</h2>
                     </div>
                     <div class="imagenContenido">
-                        <img src="imagenes/vision.jpg" alt="imagen vision">
+                        <img src="imagenes/mejoradas/vision.png" alt="imagen vision">
                     </div>
                     <div class="textoContenido">
                         <p>
@@ -96,7 +96,7 @@
                         <h2>Términos, Ofertas y Condiciones</h2>
                     </div>
                     <div class="imagenContenido">
-                        <img src="imagenes/terminos.jpg" alt="imagen terminos">
+                        <img src="imagenes/mejoradas/Terminos.png" alt="imagen terminos">
                     </div>
                     <div class="textoContenido">
                         <p>
@@ -250,7 +250,7 @@
             <!-- Contenido del pie de Página -->
             <div class="contenido-pie">
                 <a 
-                    class= "facebook" href="https://www.facebook.com/clasificados.engirabieness" target="_blank"><img src="imagenes/facebook.jpg" alt="">
+                    class= "facebook" href="https://www.facebook.com/clasificados.engirabieness" target="_blank"><img src="imagenes/mejoradas/facebook.png" alt="">
                 </a>
                 <p>
                     E-mail:girabienes77@gmail.com<br>
@@ -258,7 +258,7 @@
                 </p>
                 <!-- Redes Sociales -->
                 <div class="whatsapp">
-                    <a href="https://wa.me/+573148850295"><img src="imagenes/whatsapp.jpg" alt=""></a>
+                    <a href="https://wa.me/+573148850295"><img src="imagenes/mejoradas/whatsapp.png" alt=""></a>
                     <a href="https://wa.me/+573148850295">Envianos un<br> Mensaje</a>
                 </div>
             </div>
