creo manifest y sw, cambio email, aumento tamaño texto pie pagina

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>  
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0,maximum-scale=1.0">
     <!-- <link rel="shortcut icon" href="imagenes/icon.png" type="image/x-icon"> -->
@@ -12,6 +13,13 @@
     <link rel="stylesheet" href="css/estilosPrincipal.css">
     <link rel="stylesheet" href="css/estilosPrincipalTablet.css">
     <link rel="stylesheet" href="css/estilosPrincipalDesktop.css">
+
+
+
+
+
+
+
 </head>
 <body>
     <div class="grid-container">
@@ -250,8 +258,8 @@
                 <a 
                     class= "facebook" href="https://www.facebook.com/clasificados.engirabieness" target="_blank"><img src="imagenes/mejoradas/facebook.png" alt="">
                 </a>
-                <p>
-                    E-mail:girabienes77@gmail.com<br>
+                <p class="email">
+                    E-mail:luisfer5428@gmail.com<br>
                     Luis Fernando García García <br>
                 </p>
                 <!-- Redes Sociales -->
