agrego iconos menu, opcion registro y tienda, enlace prueba amazon

--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
                     <li><a href="#dos"><span class="icon-stats-dots"></span>Misión</a></li>
                     <li><a href="#tres"><span class="icon-eye"></span>Visión</a></li>
                     <li><a href="#cuatro"><span class="icon-file-text2"></span>Términos</a></li>
-                    <li><a href="/php/pagosCheck.php"><span class="icon-book"></span>Producto</a></li>
-                    <li><a href="#cinco"><span class="icon-envelop"></span>Contacto</a></li>
+                    <li><a href="https://www.amazon.com/-/es/ref=nav_logo"><span class="icon-cart"></span>Tienda</a></li>
+                    <li><a href="/php/registrate.php"><span class="icon-user-plus"></span>Registro</a></li>
+                    <li><a href="#cinco"><span class="icon-share2"></span>Contacto</a></li>
                 </ul>
             </nav>
         </header>
