--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li><a href="#tres"><span class="icon-eye"></span>Visión</a></li>
           <li><a href="#cuatro"><span class="icon-file-text2"></span>Términos</a></li>
           <li><a href="https://www.amazon.com/-/es/ref=nav_logo"><span class="icon-cart"></span>Tienda</a></li>
-          <li><a href="/php/registrate.php"><span class="icon-user-plus"></span>Registro</a></li>
+          <li><a href="php/pagosCheck.php"><span class="icon-user-plus"></span>Registro</a></li>
           <li><a href="#cinco"><span class="icon-share2"></span>Contacto</a></li>
         </ul>
       </nav>
