--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
   <!-- Enlaces de archivos para configuracion del sitio y PWA -->
-  <link rel="shortcut icon" href="./imagenes/icon2.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./imagenes/LogoTCPCircle.png" type="image/x-icon">
   <link rel="stylesheet" href="css/fonts.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -27,9 +27,9 @@
   <link rel="stylesheet" href="css/estilosPrincipal.css">
   <link rel="stylesheet" href="css/estilosPrincipalTablet.css">
   <link rel="stylesheet" href="css/estilosPrincipalDesktop.css">
-  <link rel="apple-touch-icon" href="./imagenes/icon2.png">
+  <link rel="apple-touch-icon" href="./imagenes/LogoTCPCircle.png">
   <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px)"
-    href="./imagenes/icon2.png">
+    href="./imagenes/LogoTCPCircle.png">
   <link rel="manifest" href="manifest.json">
 
 </head>
@@ -54,7 +54,7 @@
           <li><a href="#tres"><span class="icon-eye"></span>Visión</a></li>
           <li><a href="#cuatro"><span class="icon-file-text2"></span>Términos</a></li>
           <li><a href="https://www.amazon.com/-/es/ref=nav_logo"><span class="icon-cart"></span>Tienda</a></li>
-          <li><a href="php/pagosCheck.php"><span class="icon-user-plus"></span>Registro</a></li>
+          <li><a href="./php/pagosCheck.php"><span class="icon-user-plus"></span>Registro</a></li>
           <li><a href="#cinco"><span class="icon-share2"></span>Contacto</a></li>
         </ul>
       </nav>
