--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="css/estilosPrincipal.css">
   <link rel="stylesheet" href="css/estilosPrincipalTablet.css">
   <link rel="stylesheet" href="css/estilosPrincipalDesktop.css">
-  <link rel="apple-touch-icon" href="./imagenes/LogoTCPCircle.png">
+  <link rel="apple-touch-icon" href="./imagenes/LogoTCP.png">
   <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px)"
     href="./imagenes/LogoTCPCircle.png">
   <link rel="manifest" href="manifest.json">
