--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/estilosPrincipal.css">
+  <link rel="stylesheet" href="css/estilosPrincipal.css?v=13">
   <link rel="stylesheet" href="css/estilosPrincipalTablet.css">
   <link rel="stylesheet" href="css/estilosPrincipalDesktop.css">
   <link rel="apple-touch-icon" href="./imagenes/LogoTCP.png">
@@ -541,7 +541,7 @@
             src="imagenes/mejoradas/facebook.png" alt="">
         </a>
         <p class="email">
-          E-mail:luisfer5428@gmail.com<br>
+          Email: luisfer5428@ gmail.com<br>
           Luis Fernando García García <br>
         </p>
         <!-- Redes Sociales -->
