--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/estilosPrincipal.css?v=13">
-  <link rel="stylesheet" href="css/estilosPrincipalTablet.css">
-  <link rel="stylesheet" href="css/estilosPrincipalDesktop.css">
+  <link rel="stylesheet" href="css/estilosPrincipal.css?v=14">
+  <link rel="stylesheet" href="css/estilosPrincipalDesktop.css?v=13">
   <link rel="apple-touch-icon" href="./imagenes/LogoTCP.png">
   <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px)"
     href="./imagenes/LogoTCPCircle.png">
