--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <header class="header">
       <!-- Sección del logotipo -->
       <section class="logo">
-        <img src="imagenes/mejoradas/logo.png" alt="">
+        <img src="imagenes/logo.png" alt="">
       </section>
       <!-- Sección del menú Hamburguesa -->
       <section class="menu_bar">
@@ -64,7 +64,7 @@
         <!-- Sección de Inicio -->
         <section class="inicio" id="uno">
           <div class="imagenContenido">
-            <img src="/imagenes/mejoradas/libro.png" alt="imagen inicio">
+            <img src="/imagenes/Libro.png" alt="imagen inicio">
           </div>
           <div class="textoContenido">
             <p>
@@ -88,7 +88,7 @@
             <h2>Misión</h2>
           </div>
           <div class="imagenContenido">
-            <img src="imagenes/mejoradas/mision.png" alt="imagen-mision">
+            <img src="imagenes/mision.png" alt="imagen-mision">
           </div>
           <div class="textoContenido">
             <p>
@@ -105,7 +105,7 @@
             <h2>Visión</h2>
           </div>
           <div class="imagenContenido">
-            <img src="imagenes/mejoradas/vision.png" alt="imagen vision">
+            <img src="imagenes/vision.png" alt="imagen vision">
           </div>
           <div class="textoContenido">
             <p>
@@ -127,7 +127,7 @@
             <h2>Términos, Ofertas y Condiciones</h2>
           </div>
           <div class="imagenContenido">
-            <img src="imagenes/mejoradas/Terminos.png" alt="imagen terminos">
+            <img src="imagenes/terminos.png" alt="imagen terminos">
           </div>
           <div class="textoContenido">
             <p>
@@ -537,7 +537,7 @@
       <!-- Contenido del pie de Página -->
       <div class="contenido-pie">
         <a class="facebook" href="https://www.facebook.com/clasificados.engirabieness" target="_blank"><img
-            src="imagenes/mejoradas/facebook.png" alt="">
+            src="imagenes/facebook.png" alt="">
         </a>
         <p class="email">
           Email: luisfer5428@ gmail.com<br>
@@ -545,7 +545,7 @@
         </p>
         <!-- Redes Sociales -->
         <div class="whatsapp">
-          <a href="https://wa.me/+573148850295"><img src="imagenes/mejoradas/whatsapp.png" alt=""></a>
+          <a href="https://wa.me/+573148850295"><img src="imagenes/whatsapp.png" alt=""></a>
           <a href="https://wa.me/+573148850295">Envianos un<br> Mensaje</a>
         </div>
       </div>
