- Reduzco alto cabecera desktop - Centro slider en pantalla desktop - Cambio estilo desktop-first por mobile first - Aumento tamaño imagenes slider - Agrego enlaces a imagenes del slider

--- a/index.html
+++ b/index.html
@@ -71,24 +71,24 @@
 
             <div class="carruseles">
 
-              <section class="slider-section libro">
-                <img src="/imagenes/Libro.png" loading="lazy" alt="Libro Girabienes" />
+              <section class="slider-section">
+                <a href="https://www.amazon.com/-/es/ref=nav_logo" class="libro"><img src="/imagenes/Libro.png" alt="Libro Girabienes" /></a>
               </section>
 
               <section class="slider-section">
-                <img src="./imagenes/manillaHombre.png" alt="manillaHombre" />
+                <a href="https://www.amazon.com/-/es/ref=nav_logo"><img src="./imagenes/manillaHombre.png" alt="manillaHombre" /></a>
               </section>
 
               <section class="slider-section">
-                <img src="./imagenes/proyectorImagenes.png" alt="proyectorImagenes" />
+                <a href="https://www.amazon.com/-/es/ref=nav_logo"><img src="./imagenes/proyectorImagenes.png" alt="proyectorImagenes" /></a>
               </section>
 
               <section class="slider-section">
-                <img src="./imagenes/toallitasHumedas.png" alt="toallitasHumedas" />
+                <a href="https://www.amazon.com/-/es/ref=nav_logo"><img src="./imagenes/toallitasHumedas.png" alt="toallitasHumedas" /></a>
               </section>
 
               <section class="slider-section">
-                <img src="./imagenes/zapatosDeportivos.png" alt="zapatosDeportivos" />
+                <a href="https://www.amazon.com/-/es/ref=nav_logo"><img src="./imagenes/zapatosDeportivos.png" alt="zapatosDeportivos" /></a>
               </section>
 
             </div>
